[package]
name = "wateor"
version = "0.1.0"
authors = ["Paul Sanford <me@paulsanford.net>"]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
anyhow = "1.0.40"
tar = "0.4.35"
bzip2 = "0.4.2"
directories = "3.0.2"
chrono = "0.4.19"
sled = "0.34.6"
bincode = "2.0.0-alpha.1"
openssl = "0.10.34"
rand = "0.8.3"
rpassword = "5.0.1"
walkdir = "2.3.2"
config = "0.11.0"
size-display = "0.1.4"
clap = "3.0.0-beta.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
