[package]
name = "wateor"
version = "0.1.0"
authors = ["Paul Sanford <me@paulsanford.net>"]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14"
anyhow = "1"
tar = "0.4"
bzip2 = "0.4"
directories = "4"
chrono = "0.4"
sled = "0.34"
bincode = "2.0.0-rc.1"
openssl = "0.10"
rand = "0.8"
rpassword = "6"
walkdir = "2.3"
config = "0.13"
size-display = "0.1"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
